--- a/src/components/NewsList/NewsList.css
+++ b/src/components/NewsList/NewsList.css
@@ -29,6 +29,6 @@ th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: #4caf50;
+  background-color: #0bb4d6;
   color: white;
 }
